# gnome-shell-extension-gsconnect

./: .editorconfig  .eslintrc.json  .flake8  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Index.md  README.md  RELEASE_CHECKLIST.md  REUSE.toml  _config.yml  crowdin.yml  eslint.config.js  eslint.config.mjs  meson.build  meson_options.txt  note  package.json  port.sh  pyproject.toml
.github/: dependabot.yml  labeler.yml
.reuse/: dep5
LICENSES/: CC-BY-SA-3.0.txt  MPL-2.0.txt
data/: application.css  config.js.in  connect.ui  contacts.ui  conversation-window.ui  conversation.ui  debug.ui  devel.ui  device.ui  event-editor.ui  gsconnect.xml  menus.ui  meson.build  messaging.ui  metadata.json.in  notification.ui  org.freedesktop.Notifications.xml  org.gnome.ScreenSaver.xml  org.gnome.Shell.Extensions.GSConnect.Device.xml  org.gnome.Shell.Extensions.GSConnect.Preferences.desktop.in  org.gnome.Shell.Extensions.GSConnect.data.gresource.xml  org.gnome.Shell.Extensions.GSConnect.desktop  org.gnome.Shell.Extensions.GSConnect.desktop.in  org.gnome.Shell.Extensions.GSConnect.gresource.xml  org.gnome.Shell.Extensions.GSConnect.gschema.xml  org.gnome.Shell.Extensions.GSConnect.sdp.xml  org.gnome.Shell.Extensions.GSConnect.service  org.gnome.Shell.Extensions.GSConnect.service-dbus  org.gnome.Shell.Extensions.GSConnect.service-systemd  org.gnome.Shell.Extensions.GSConnect.service.in  org.gnome.Shell.Extensions.GSConnect.xml  org.gnome.shell.extensions.gsconnect.daemon.desktop  org.gnome.shell.extensions.gsconnect.daemon.xml  org.gnome.shell.extensions.gsconnect.device.xml  org.gnome.shell.extensions.gsconnect.gresource.xml  org.gnome.shell.extensions.gsconnect.gschema.xml  org.gnome.shell.extensions.gsconnect.json-chrome  org.gnome.shell.extensions.gsconnect.json-mozilla  org.gnome.shell.extensions.mconnect.gresource.xml  org.gnome.shell.extensions.mconnect.gschema.xml  (+7 more)
data/firewalld/: gsconnect.xml  meson.build
data/gtk/: menus.ui
data/metainfo/: gsconnect-overlapping.xcf  meson.build  org.gnome.Shell.Extensions.GSConnect.metainfo.xml.in
data/ui/: bluetooth-handoff-device-row.ui  bluetooth-handoff-dialog.ui  command-editor.ui  command-row.ui  connect-dialog.ui  connect.ui  contact-chooser.ui  contacts-address-row.ui  contacts.ui  conversation.ui  devel.ui  device-page.ui  device-pair.ui  device-preferences.ui  device.ui  find-my-phone.ui  legacy-messaging-dialog.ui  messaging-conversation-input-text.ui  messaging-conversation-message.ui  messaging-conversation-partecipants.ui  messaging-conversation-row.ui  messaging-conversation-sharesms.ui  messaging-conversation-summary.ui  messaging-conversation.ui  messaging-window.ui  mousepad-input-dialog.ui  notification-reply-dialog.ui  openssl-dialog.ui  preferences-command-editor.ui  preferences-device-page.ui  preferences-device-pair.ui  preferences-device-panel.ui  preferences-section-row.ui  preferences-settings.ui  preferences-shortcut-editor copy.ui  preferences-shortcut-editor.ui  preferences-window-copy.ui  preferences-window.ui  service-device-chooser.ui  service-error-dialog.ui  (+3 more)
data/ui/mlorier-ui-work/: messaging-conversation-message.ui  messaging-conversation-summary.ui  messaging-conversation.ui  messaging-window.ui  mousepad-input-dialog.ui  service-device-chooser.ui  service-error-dialog.ui
data/webextension/: meson.build  org.gnome.shell.extensions.gsconnect.json.google.in  org.gnome.shell.extensions.gsconnect.json.mozilla.in
doc/: Contributing.md  Devices.md  Installation.md  Packaging.md  Roadmap.md  Theming.md  Translating.md
docs/: Acknowledgements.md  Contributing.md  Debugging.md  Devices.md  Frequently-Asked-Questions.md  Help.md  Home.md  Packaging.md  Preferences.md  Roadmap.md  Translating.md  _Sidebar.md  bluetooth-transport.md  wayland-clipboard-fix.md
installed-tests/: .eslintrc.json  config.js.in  jasmine.js  jasmine.test.in  jasmine.test.in.license  meson.build  minijasmine  prepare-tests.sh
installed-tests/data/: local-certificate.pem  local-private.pem  remote-certificate.pem  remote-private.pem  vcard-invalid.vcf  vcard-valid.vcf
installed-tests/fixtures/: backend.js  mpris.js  utils.js
installed-tests/fixtures/components/: clipboard.js  index.js  input.js  mpris.js  notification.js  pulseaudio.js  session.js  sound.js  upower.js
installed-tests/suites/: meson.build
installed-tests/suites/backends/: meson.build  testLanBackend.js
installed-tests/suites/components/: meson.build  testClipboardComponent.js  testMprisComponent.js
installed-tests/suites/core/: meson.build  testDevice.js  testManager.js  testPacket.js  testPlugin.js
installed-tests/suites/plugins/: meson.build  testBatteryPlugin.js  testClipboardPlugin.js  testContactsPlugin.js  testFindmyphonePlugin.js  testMousepadPlugin.js  testMprisPlugin.js  testNotificationPlugin.js  testPhotoPlugin.js  testPingPlugin.js  testPresenterPlugin.js  testRuncommandPlugin.js  testSftpPlugin.js  testSharePlugin.js  testSmsPlugin.js  testSystemvolumePlugin.js  testTelephonyPlugin.js
meson/: mkdeb.sh  mkzip.sh  nmh.sh  zip.sh
nautilus-extension/: meson.build  nautilus-gsconnect.py
po/: LINGUAS  POTFILES  ar-SA.po  ar.po  ar_SA.po  be.po  bg.po  ca-ES.po  ca.po  cs.po  cs_CZ.po  da.po  de.po  el.po  en.po  es.po  et.po  fa-IR.po  fa.po  fa_IR.po  fi-FI.po  fi.po  fi_FI.po  fr.mo  fr.po  fr_FR.po  fy-NL.po  fy.po  fy_NL.po  gl.po  gnome-shell-extension-gsconnect.pot  gnome-shell-extension-mconnect.pot  gsconnect.pot  he.po  hr.po  hu.po  id-ID.po  id.po  id_ID.po  it.mo  (+40 more)
src/: _bootstrap.js  _gsconnect.js  actors.js  client.js  common.js  compat.js  config.mjs  extension.js  folks-cache.py  folks.py  gsconnect  gsconnect-preferences  gsconnect-preferences.js  gsconnect-preferences.sh  gsconnect.sh  gsettingsWidget.js  kdeconnect.js  lib.js  mconnect.js  nautilus-gsconnect.py  nautilus-send-gsconnect.py  nautilus-send-mconnect.py  preferences-app.js  prefs.js  share.js  sms.js  sound.js  stylesheet.css  wl_clipboard.js
webextension/: .editorconfig  .eslintrc.json  background.html  gettext.js  mkwebext.sh  (+6 more)
(+209 files in other folders)
